--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=tester
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.database=tester
 
-# spring.data.mongodb.host=${MONGOHOST}
-# spring.data.mongodb.port=${MONGOPORT}
-# spring.data.mongodb.database=${MONGODB}
-# spring.data.mongodb.username=${MONGOUSER}
-# spring.data.mongodb.password=${MONGOPASSWORD}
-# spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=${MONGOHOST}
+spring.data.mongodb.port=${MONGOPORT}
+spring.data.mongodb.database=${MONGODB}
+spring.data.mongodb.username=${MONGOUSER}
+spring.data.mongodb.password=${MONGOPASSWORD}
+spring.data.mongodb.authentication-database=admin
 
-# movies.api.key=${MOVIES_API_KEY}
+movies.api.key=${MOVIES_API_KEY}
